tests/NormalTests/paczka1/small_fuzzy/93041551.err
Error in line 1: 2lPIEcXct A867 79,8
Error in line 8: CbQz3Z9 S618 48,5
Error in line 11: CbQz3Z9 A247 70,0
